--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -5,3 +5,9 @@ body{
     margin-top:0;
     margin-left: 0;
 }
+
+h3{
+    margin-block-start:0;
+margin-block-end:0;
+}
+@import url('https://fonts.googleapis.com/css?family=Raleway:400,800&display=swap');
