--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -10,4 +10,13 @@ h3{
     margin-block-start:0;
 margin-block-end:0;
 }
+
+p{
+    margin-block-start: 0em;
+    margin-block-end:0em;
+}
+h2{
+    margin-block-start: 0em;
+    margin-block-end:0em;
+}
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,800&display=swap');
