--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,11 +1,18 @@
 body{
-    background: #1b2936;
+    background: #122636;
     margin-left:0;
     margin-right:0;
     margin-top:0;
     margin-left: 0;
 }
-
+ul{
+    margin-block-start: 0em;
+    margin-block-end:0em;
+}
+li{
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+}
 h3{
     margin-block-start:0;
 margin-block-end:0;
@@ -19,4 +26,4 @@ h2{
     margin-block-start: 0em;
     margin-block-end:0em;
 }
-@import url('https://fonts.googleapis.com/css?family=Raleway:400,800&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
